细节优化
【优化】
JWT、全局配置、Token工具